HTML del inicio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <title>Web Site</title>
 </head>
 <body>
+
+
+    <!-- Inicio -->
+
+
+    <header>
+        <div class="header__navbar">
+            <h3>Physionic</h3>
+            <div class="header__navbar-links">
+                <a href="">Home</a>
+                <a href="">Product</a>
+                <a href="">Pricing</a>
+                <a href="">Contact</a>
+            </div>
+            <button>
+                Get Quote Now
+                <img src="/assets/img/flecha-derecha-boton-inicio.png" alt="">
+            </button>
+        </div>
+    </header>
+    <div class="inicio">
+        <div class="inicio__content">
+            <div class="inicio__left">
+                <h1>Meet the Best Hospital</h1>
+                <p>We know how large objects will act, but things on a small scale</p>
+                <button>Get Quote Now</button>
+                <button>Learn More</button>
+            </div>
+            <div class="inicio__right">
+                <h3>Book Appointment</h3>
+                <form action="">
+                    <label for="name">Name *</label>
+                    <input type="text" name="name" placeholder="Full Name *">
+                    <label for="email">Email address *</label>
+                    <input type="email" name="email" placeholder="example@gmail.com">
+                    <label for="departament">Departament *</label>
+                    <input type="text" name="departament" placeholder="Please select">
+                    <label for="time">Time *</label>
+                    <input type="datetime" name="time" placeholder="4:00 Available">
+                    <button>Book Appointment</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    
     
 </body>
 </html>
