--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Web Site</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+
+    <!-- Modulo 2: Andres -->
+
+
+    <div class="modulo-2">
+      <h1>Leading Medicine</h1>
+      <p>
+        Problems trying to resolve the conflict between<br />
+        the two major realms of Classical physics: Newtonian mechanics
+      </p>
+    </div>
+    <div class="modulo-2-container">
+      <div class="modulo-2-box">
+        <div class="modulo-2-box__top">
+          <button><img src="/assets/img/persons.png" /></button>
+          <h2>Emergency Case</h2>
+        </div>
+        <div class="modulo-2-box__theme">
+          <ul>
+            <li>- The best products start with Figma</li>
+            <li>- Design with real data</li>
+            <li>- Lightning fast prototyping</li>
+            <li>- Fastest way to organize</li>
+            <li>- Work at the speed of thought.</li>
+          </ul>
+          <p>Learn More</p>
+        </div>
+      </div>
+      <div class="modulo-2-box">
+        <div class="modulo-2-box__top">
+          <button><img src="/assets/img/persons.png" /></button>
+          <h2>Cancer Care</h2>
+        </div>
+        <div class="modulo-2-box__theme">
+          <ul>
+            <li>- The best products start with Figma</li>
+            <li>- Design with real data</li>
+            <li>- Lightning fast prototyping</li>
+            <li>- Fastest way to organize</li>
+            <li>- Work at the speed of thought.</li>
+          </ul>
+          <p>Learn More</p>
+        </div>
+      </div>
+      <div class="modulo-2-box">
+        <div class="modulo-2-box__top">
+          <button><img src="/assets/img/persons.png" /></button>
+          <h2>Health Queries</h2>
+        </div>
+        <div class="modulo-2-box__theme">
+          <ul>
+            <li>- The best products start with Figma</li>
+            <li>- Design with real data</li>
+            <li>- Lightning fast prototyping</li>
+            <li>- Fastest way to organize</li>
+            <li>- Work at the speed of thought.</li>
+          </ul>
+          <p>Learn More</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modulo 2: Andres END -->
+  </body>
 </html>
