modulo leadingMedicine listo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Web Site</title>
 </head>
 <body>
-    
+    <section class="leadingMedicine">
+        <h1 class="leadingMedicine__title ">Leading Medicine</h1>
+        <p class="leadingMedicine__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero necessitatibus assumenda earum</p>
+        <div class="leadingMedicine__customers">
+            <div class="leadingMedicine__customers--card">
+                <div class="leadingMedicine__customers--score">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                </div>
+                <p class="leadingMedicine__customers--opinion">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum possimus, repudiandae excepturi labore in quas eveniet sapiente fugit. Voluptates error fugiat doloribus voluptas a, alias doloremque consectetur optio repellendus culpa?
+                </p>
+                <div class="leadingMedicine__customers--avatar">
+                    <img src="./assets/img/userIcon.svg" alt="user">
+                </div>
+            </div>
+            <div class="leadingMedicine__customers--card">
+                <div class="leadingMedicine__customers--score">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                </div>
+                <p class="leadingMedicine__customers--opinion">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum possimus, repudiandae excepturi labore in quas eveniet sapiente fugit. Voluptates error fugiat doloribus voluptas a, alias doloremque consectetur optio repellendus culpa?
+                </p>
+                <div class="leadingMedicine__customers--avatar">
+                    <img src="./assets/img/user2Icon.svg" alt="user2Icon">
+                </div>
+            </div>
+            <div class="leadingMedicine__customers--card">
+                <div class="leadingMedicine__customers--score">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                    <img src="./assets/img/staricon.svg" alt="star-icon">
+                </div>
+                <p class="leadingMedicine__customers--opinion">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum possimus, repudiandae excepturi labore in quas eveniet sapiente fugit. Voluptates error fugiat doloribus voluptas a, alias doloremque consectetur optio repellendus culpa?
+                </p>
+                <div class="leadingMedicine__customers--avatar">
+                    <img src="./assets/img/user3Icon.svg" alt="user">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
