getInTouch footer listo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Web Site</title>
 </head>
 <body>
-    
+    <section class="getInTouch__footer">
+        <div class="getInTouch__footer--info">
+            <p class="getInTouch__footer--info-title">Get In Touch</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor, sit amet consectetur</p> 
+            <div class="getInTouch__footer--info-media">
+                <a href="/"><img src="./assets/img/facebookIcon.svg" alt="facebook"></a>
+                <a href="/"><img src="./assets/img/instaIcon.svg" alt="instagram"></a>
+                <a href="/"><img src="./assets/img/twitterIcon.svg" alt="twitter"></a>
+            </div>         
+        </div>
+        <div class="getInTouch__footer--info">
+            <p class="getInTouch__footer--info-title">Company info</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+        </div>
+        <div class="getInTouch__footer--info">
+            <p class="getInTouch__footer--info-title">Features</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+        </div>
+        <div class="getInTouch__footer--info">
+            <p class="getInTouch__footer--info-title">Resources</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+            <p class="getInTouch__footer--info-content"> Lorem ipsum dolor</p>
+        </div>
+    </section>
+    <div class="getInTouch__footer--madeWithLove">
+        <p>Made With Love By Figmaland All Right Reserved </p>
+    </div>
 </body>
 </html>
